<resources>
    <string name="app_name">lab4_1</string>
    <string name="click_on_it">Click on it!</string>
    <string name="mot">Just do it!</string>
</resources>